--- a/Config/config.env
+++ b/Config/config.env
@@ -10,6 +10,6 @@ SMTP_USER=mr.kesavaperumal@gmail.com
 SMTP_PASS=vomfvkavphsxeerj
 SMTP_FROM_NAME=EMart
 SMTP_FROM_EMAIL=mr.kesavaperumal@gmail.com
-FRONEND_URL=http://localhost:5173
+FRONEND_URL=https://project-emarket.web.app
 RAZORPAY_KEY_ID=rzp_test_ReOawgBmTXOixV
 RAZORPAY_KEY_SECRE=SxYlJa7K96u5LguUZp86aoTX
